--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ small{
     font-size:15px;
 }
 
-/* outline */
+/* outline----------------------------------------------------------------- */
 .outline-notes{
     margin:0 0 18px;
     color:#256BE6;
@@ -68,4 +68,140 @@ small{
 
 .outline-text{
     margin:0 0 30px;
+}
+
+/* card-------------------------------------------------------------------- */
+
+.card-icon{
+    margin-bottom:40px;
+}
+
+.card-title{
+    margin-bottom:20px;
+    color:#2f2f25;
+    font-size:22px;
+    font-weight:bold;
+}
+
+/* btn-------------------------------------------------------------------- */
+
+.btn{
+    display:block;
+    width:200px;
+    margin-top:60px;
+    padding:15px 0;
+    background-color:#256BE6;
+    font-weight:bold;
+    color:#fff;
+    letter-spacing:0.025em;
+    text-align:center;
+    text-decoration:none;
+    border-radius:30px;
+}
+
+/* home--------------------------------------------------------- */
+
+.futures{
+    padding:80px 0;
+}
+
+.futures .inner{
+    display:flex;
+    justify-content:space-between;
+    flex-wrap:wrap;
+    align-items:center;
+}
+
+.futures .outline{
+    width:42.7%;
+}
+
+.futures-list{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:space-between;
+    width:50%;
+    margin-bottom:-70px;
+}
+
+.futures-list .card{
+    width:44%;
+    margin:0 0 70px;
+}
+
+.payment{
+    padding:80px 0;
+    background:#F7FAFF;
+}
+
+.payment .inner{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:space-between;
+    flex-direction:row-reverse;
+    align-items:center;
+}
+
+.payment .outline{
+    width:42.7%;
+}
+
+.payment-pic{
+    width:50%;
+}
+
+
+/* Service----------------------------------------------------------------- */
+
+.offer{
+    padding:80px 0;
+    background:#505050;
+    color:#fff;
+    text-align:center;
+}
+
+.offer .outline-title{
+    color:#fff;
+}
+
+.offer .btn{
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.wedo{
+    padding:80px;
+    text-align:center;
+}
+
+.wedo .outline{
+    margin-bottom:60px;
+}
+
+.service{
+    background:#F7FAFF;
+    padding:60px 70px;
+}
+
+.service-title{
+    margin-bottom:60px;
+    color:#2F2F35;
+    font-size:28px;
+    font-weight:bold;
+}
+
+.service-list{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:space-between;
+}
+
+.service-list .card{
+    width:29.1%;
+    padding:40px 35px;
+    background-color:#fff;
+}
+
+.service-list .card{
+    margin:40px auto 0;
 }
